s/networking/\- in instance_list's private ip

--- a/openstack-dashboard/dashboard/templates/_syspanel_instance_list.html
+++ b/openstack-dashboard/dashboard/templates/_syspanel_instance_list.html
@@ -20,7 +20,7 @@
       <td>{{instance.attrs.image_name}}</td>
 
       <td>{{instance.addresses.public.0.addr|default:'N/A'}}</td>
-      <td>{{instance.addresses.private.0.addr|default:'networking'}}</td>
+      <td>{{instance.addresses.private.0.addr|default:'-'}}</td>
 
       <td>{{instance.status}}</td>
       <td id="actions">
