--- a/openstack-dashboard/dashboard/templates/_instance_list.html
+++ b/openstack-dashboard/dashboard/templates/_instance_list.html
@@ -15,7 +15,7 @@
           <td>{{instance.id}}</td>
           <td>{{instance.name}}</td>
           <td>{{instance.attrs.image_name}}</td>
-          <td>{{instance.addresses.private.0.addr|default:'networking'}}</td>
+          <td>{{instance.addresses.private.0.addr|default:'-'}}</td>
           <td>{{instance.addresses.public.0.addr|default:'N/A'}}</td>
           <td>{{instance.status}}</td>
           <td id="actions">
