--- a/openstack-dashboard/dashboard/templates/_image_list.html
+++ b/openstack-dashboard/dashboard/templates/_image_list.html
@@ -12,7 +12,7 @@
       <td>{{image.name}}</td>
       <td>{{image.created|date:"Y-m-d H:i"}}</td>
       <td>{{image.updated|date:"Y-m-d H:i"}}</td>
-      <td>{{image.status}}</td>
+      <td>{{image.status|capfirst}}</td>
       <td id="actions">
         <ul>
           <li><a id="launch_{{image.id}}" class="launch" href="{% url dash_images_launch request.user.tenant image.id %}">Launch</a></li>
