--- a/openstack-dashboard/dashboard/templates/_instance_list.html
+++ b/openstack-dashboard/dashboard/templates/_instance_list.html
@@ -17,7 +17,7 @@
           <td>{{instance.attrs.image_name}}</td>
           <td>{{instance.addresses.private.0.addr|default:'-'}}</td>
           <td>{{instance.addresses.public.0.addr|default:'N/A'}}</td>
-          <td>{{instance.status}}</td>
+          <td>{{instance.status|lower|capfirst}}</td>
           <td id="actions">
             <ul>
               <li>{% include "_terminate.html" with form=terminate_form %}</li>
