--- a/openstack-dashboard/dashboard/templates/_syspanel_instance_list.html
+++ b/openstack-dashboard/dashboard/templates/_syspanel_instance_list.html
@@ -22,7 +22,7 @@
       <td>{{instance.addresses.public.0.addr|default:'N/A'}}</td>
       <td>{{instance.addresses.private.0.addr|default:'-'}}</td>
 
-      <td>{{instance.status}}</td>
+      <td>{{instance.status|lower|capfirst}}</td>
       <td id="actions">
         <ul>
           <li>{% include "_terminate.html" with form=terminate_form %}</li>
