add fake user management

--- a/openstack-dashboard/dashboard/templates/_user_form.html
+++ b/openstack-dashboard/dashboard/templates/_user_form.html
@@ -6,5 +6,5 @@
     {{ field.errors }}
     {{ field }}
   {% endfor %}
-  <input type="submit" value="Create User" class="large-rounded" />
+  <input type="submit" value="Submit" class="large-rounded" />
 </form>
