--- a/openstack-dashboard/dashboard/templates/syspanel_user_update.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_user_update.html
@@ -20,9 +20,8 @@
   <div class="main_content">
     <div class="dash_block wide form">
       <div class='title_block'> 
-        <h3>Create User</h3> 
+        <h3>Update User</h3> 
       </div> 
-FIXME!!! this doesn't work correctly
 
       {% include '_user_form.html' %}
       
