--- a/openstack-dashboard/dashboard/templates/_tenant_delete.html
+++ b/openstack-dashboard/dashboard/templates/_tenant_delete.html
@@ -4,6 +4,6 @@
     {{hidden}}
   {% endfor %}
   <input name="tenant" type="hidden" value="{{tenant.id}}" />
-  <input id="enable_{{tenant.id}}" class="enable" type="submit" value="Delete" />
+  <input id="enable_{{tenant.id}}" class="enable" title="Tenant: {{tenant.id}}" type="submit" value="Delete" />
 </form>
 
