--- a/openstack-dashboard/dashboard/templates/_delete_image.html
+++ b/openstack-dashboard/dashboard/templates/_delete_image.html
@@ -4,5 +4,5 @@
     {{hidden}}
   {% endfor %}
   <input name="image_id" type="hidden" value="{{image.id}}" />
-  <input id="delete_{{image.id}}" class="delete" type="submit" value="Delete" />
+  <input id="delete_{{image.id}}" class="delete" title="Image: {{image.name}}" type="submit" value="Delete" />
 </form>
