--- a/openstack-dashboard/dashboard/templates/_user_toggle_enabled.html
+++ b/openstack-dashboard/dashboard/templates/_user_toggle_enabled.html
@@ -5,7 +5,7 @@
       {{hidden}}
     {% endfor %}
     <input name="user" type="hidden" value="{{user.id}}" />
-    <input id="disable_{{user.id}}" class="disable" type="submit" value="Disable" />
+    <input id="disable_{{user.id}}" class="disable" title="User: {{user.id}}" type="submit" value="Disable" />
   </form>
 {% else %}                          
   <form id="form_user_enable_{{user.id}}" class="form-user-enable" method="post">
@@ -14,6 +14,6 @@
       {{hidden}}
     {% endfor %}
     <input name="user" type="hidden" value="{{user.id}}" />
-    <input id="enable_{{user.id}}" class="enable" type="submit" value="Enable" />
+    <input id="enable_{{user.id}}" class="enable" title="User: {{user.id}}" type="submit" value="Enable" />
   </form>
 {% endif %}
