--- a/openstack-dashboard/dashboard/templates/syspanel_users.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_users.html
@@ -45,8 +45,7 @@
           <td id="actions">
             <ul>
               <li>{% include "_user_delete.html" with form=user_delete_form %}</li>
-              <li>{% include "_user_toggle_enabled.html" with form=user_toggle_enabled_form %}</li>
-              <li><a href="{% url syspanel_users_update user.id %}">Update</a></li>
+              <li><a href="{% url syspanel_users_update user.id %}">Edit</a></li>
             </ul>                
           </td> 
         </tr>
