image editing now mostly working

--- a/openstack-dashboard/dashboard/templates/syspanel_image_update.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_image_update.html
@@ -10,20 +10,19 @@
 
 {% block main %}
   <div id='page_header'>
-    <h2><span>System Panel:</span> Users </h2>
-    <p class='desc'><span>&mdash;</span> Update User </p>
+    <h2><span>System Panel:</span> Images </h2>
+    <p class='desc'><span>&mdash;</span> Update Image </p>
   </div>
 
   {% include "_messages.html" %}
 
-  
   <div class="main_content">
     <div class="dash_block wide form">
       <div class='title_block'> 
-        <h3>Update Image</h3> 
+        <h3>Update User</h3> 
       </div> 
 
-      {% include '_user_form.html' %}
+      {% include '_image_form.html' %}
       
       <div class="right">
         <h3>Description:</h3>
