image uploading now works

--- a/openstack-dashboard/dashboard/templates/syspanel_image_upload.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_image_upload.html
@@ -11,7 +11,7 @@
 {% block main %}
   <div id='page_header'>
     <h2><span>System Panel:</span> Images </h2>
-    <p class='desc'><span>&mdash;</span> Update Image </p>
+    <p class='desc'><span>&mdash;</span> Upload Image </p>
   </div>
 
   {% include "_messages.html" %}
@@ -19,10 +19,10 @@
   <div class="main_content">
     <div class="dash_block wide form">
       <div class='title_block'> 
-        <h3>Update Image</h3> 
+        <h3>Upload Image</h3> 
       </div> 
 
-      {% include '_image_form.html' %}
+      {% include '_image_upload_form.html' %}
       
       <div class="right">
         <h3>Description:</h3>
