--- a/openstack-dashboard/dashboard/templates/dash_usage.html
+++ b/openstack-dashboard/dashboard/templates/dash_usage.html
@@ -82,6 +82,11 @@
           {% endfor %}
         </tbody>
       </table>
+    {% else %}
+        <div class="status_box info">
+          <h2>Info</h2>
+          <p>There are currently no instances.<br/><br/>You can launch an instance from the  <a href='{% url dash_images request.user.tenant %}'>Images Page.</a></p>
+        </div>
     {% endif %}
   </div>
 </div>
