adding title to refresh links, and fixing image table width

--- a/openstack-dashboard/dashboard/templates/syspanel_instances.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_instances.html
@@ -21,7 +21,7 @@
       <div class='table_title wide'>
         <h3>Instances</h3>
 
-        <a class="refresh" href="{% url syspanel_instances %}">Refresh List</a>
+        <a <a class="refresh" title="Refresh"" href="{% url syspanel_instances %}">Refresh List</a>
 
         <div class='search'>
           <form action='' method='post'>
