fixing extra quote on refresh links

--- a/openstack-dashboard/dashboard/templates/syspanel_flavors.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_flavors.html
@@ -18,7 +18,7 @@
   <div class="main_content">
       <div class='table_title wide'>
         <h3>Flavors</h3>
-        <a <a class="refresh" title="Refresh"" href="{% url syspanel_flavors %}">Refresh List</a>
+        <a <a class="title="Refresh" title="Refresh" href="{% url syspanel_flavors %}">Refresh List</a>
         <div class='search'>
           <form action='' method='post'>
             <fieldset>
