--- a/openstack-dashboard/dashboard/templates/syspanel_services.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_services.html
@@ -17,7 +17,7 @@
     <div class="main_content">
       <div class='table_title wide'>
         <h3>Services</h3>
-        <a <a class="refresh" title="Refresh"" href="{% url syspanel_services %}">Refresh List</a>
+        <a <a class="refresh" title="Refresh" href="{% url syspanel_services %}">Refresh List</a>
         <div class='search'>
           <form action='' method='post'>
             <fieldset>
