--- a/openstack-dashboard/dashboard/templates/dash_instances.html
+++ b/openstack-dashboard/dashboard/templates/dash_instances.html
@@ -20,6 +20,7 @@
     <div class='main_content'>
       <div class='table_title wide'>
         <h3>Instances</h3>
+        <a class="refresh" title="Refresh" href="{% url dash_instances request.user.tenant %}">Refresh List</a>
         <div class='search'>
           <form action='' method='post'>
             <fieldset>
