adding refresh buttons

--- a/openstack-dashboard/dashboard/templates/dash_images.html
+++ b/openstack-dashboard/dashboard/templates/dash_images.html
@@ -19,6 +19,7 @@
     {% if images %}
       <div class='table_title wide'>
         <h3>Images</h3>
+        <a class="refresh" title="Refresh" href="{% url dash_images request.user.tenant %}">Refresh List</a>
         <div class='search'>
           <form action='' method='post'>
             <fieldset>
