--- a/openstack-dashboard/dashboard/templates/syspanel_tenants.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenants.html
@@ -17,6 +17,7 @@
     <div class="main_content">
       <div class='table_title wide'>
         <h3>Tenants</h3>
+        <a class="refresh" title="Refresh" href="{% url syspanel_tenants %}">Refresh List</a>
         <div class='search'>
           <form action='' method='post'>
             <fieldset>
