show MB for ram usage

--- a/openstack-dashboard/dashboard/templates/dash_usage.html
+++ b/openstack-dashboard/dashboard/templates/dash_usage.html
@@ -31,7 +31,7 @@
       <div class="usage_block">
         <h3>RAM</h3>
         <ul>
-          <li><span class="quantity">{{usage.total_active_ram_size|default:0}}</span><span class="unit">GB</span> Active</li>
+          <li><span class="quantity">{{usage.total_active_ram_size|default:0}}</span><span class="unit">MB</span> Active</li>
         </ul>
       </div>
 
