--- a/openstack-dashboard/dashboard/templates/dash_usage.html
+++ b/openstack-dashboard/dashboard/templates/dash_usage.html
@@ -76,7 +76,7 @@
               <td>{{instance.ram_size}}MB</td>
               <td>{{instance.disk_size}}GB</td>
               <td>{{instance.flavor}}</td>
-              <td>{{instance.started_at|parse_datetime|timeuntil}}</td>
+              <td>{{instance.started_at|parse_datetime|timesince}}</td>
               <td>{{instance.state}}</td>
           </tr>
           {% endfor %}
