fix display of instance uptime

--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
@@ -90,7 +90,7 @@
                 <td>{{instance.ram_size}}MB</td>
                 <td>{{instance.disk_size}}GB</td>
                 <td>{{instance.flavor}}</td>
-                <td>{{instance.started_at|parse_datetime|timeuntil}}</td>
+                <td>{{instance.started_at|parse_local_datetime|timesince}}</td>
                 <td>{{instance.state}}</td>
             </tr>
             {% endfor %}
