some progress on user editing

--- a/openstack-dashboard/dashboard/templates/syspanel_user_update.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_user_update.html
@@ -20,7 +20,7 @@
   <div class="main_content">
     <div class="dash_block wide form">
       <div class='title_block'> 
-        <h3>Update Image</h3> 
+        <h3>Update User</h3> 
       </div> 
 
       {% include '_user_form.html' %}
