--- a/openstack-dashboard/dashboard/templates/_instance_list.html
+++ b/openstack-dashboard/dashboard/templates/_instance_list.html
@@ -7,6 +7,7 @@
     <th>Size</th>
     <th>Private IP</th>
     <th>Public IP</th>
+    <th>Groups</th>
     <th>State</th>
     <th>Actions</th>
   </tr>
@@ -26,6 +27,7 @@
           <td>{{instance.addresses.private.0.addr|default:'-'}}</td>
           <td>{{instance.addresses.public.0.addr|default:'N/A'}}</td>
           <td>{{instance.status|lower|capfirst}}</td>
+          <td>{{instance.attrs.security_groups|join:', '}}</td>
           <td id="actions">
             <ul>
               <li>{% include "_terminate.html" with form=terminate_form %}</li>
