--- a/openstack-dashboard/dashboard/templates/base.html
+++ b/openstack-dashboard/dashboard/templates/base.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+{% load branding %}
 <html>
   <head>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
-    <title>OpenStack Dashboard{% block title %}{% endblock %}</title>
+    <title>{% site_branding %} Dashboard{% block title %}{% endblock %}</title>
     <script charset='utf-8' src='/media/dashboard/js/jquery.min.js' type='text/javascript'></script>
     <script charset='utf-8' src='/media/dashboard/js/jquery-ui.min.js' type='text/javascript'></script>
     <script charset='utf-8' src='/media/dashboard/js/jquery.quicksearch.js' type='text/javascript'></script>
