fix uptime on user dashboard

--- a/openstack-dashboard/dashboard/templates/dash_usage.html
+++ b/openstack-dashboard/dashboard/templates/dash_usage.html
@@ -76,7 +76,7 @@
               <td>{{instance.ram_size}}MB</td>
               <td>{{instance.disk_size}}GB</td>
               <td>{{instance.flavor}}</td>
-              <td>{{instance.started_at|parse_local_datetime|timesince}}</td>
+              <td>{{instance.uptime_at|timesince}}</td>
               <td>{{instance.state}}</td>
           </tr>
           {% endfor %}
@@ -88,7 +88,7 @@
               <td>{{instance.ram_size}}MB</td>
               <td>{{instance.disk_size}}GB</td>
               <td>{{instance.flavor}}</td>
-              <td>{{instance.started_at|parse_local_datetime|timesince}}</td>
+              <td>{{instance.uptime_at|timesince}}</td>
               <td>{{instance.state}}</td>
           </tr>
           {% endfor %}
