--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
@@ -46,7 +46,7 @@
         <h3>Disk</h3>
         <ul>
           <li><span class="quantity">{{usage.total_active_disk_size}}</span><span class="unit">GB</span> Active</li>
-          <li><span class="quantity">{{usage.total_disk_usage|floatformat}}</span><span class="unit">GB/hr</span> Used</li>
+          <li><span class="quantity">{{usage.total_disk_usage|floatformat}}</span><span class="unit">GB-HR</span> Used</li>
         </ul>
       </div>
 
