--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
@@ -31,7 +31,7 @@
         <h3>CPU</h3>
         <ul>
           <li><span class="quantity">{{usage.total_active_vcpus}}</span><span class="unit">Cores</span> Active</li>
-          <li><span class="quantity">{{usage.total_cpu_usage|floatformat}}</span><span class="unit">CPU/hr</span> Used</li>
+          <li><span class="quantity">{{usage.total_cpu_usage|floatformat}}</span><span class="unit">CPU-HR</span> Used</li>
         </ul>
       </div>
 
