--- a/openstack-dashboard/dashboard/templates/dash_keypairs.html
+++ b/openstack-dashboard/dashboard/templates/dash_keypairs.html
@@ -36,7 +36,7 @@
     {% else %}
         <div class="status_box info">
           <h2>Info</h2>
-          <p>There are currently no keypairs.<br/> <a href='{% url dash_keypairs_create request.user.tenant %}'>Create A Keypair &gt;&gt;.</a></p>
+          <p>There are currently no keypairs. <a href='{% url dash_keypairs_create request.user.tenant %}'>Create A Keypair &gt;&gt;</a></p>
         </div>
     {% endif %}
   </div>
