--- a/openstack-dashboard/dashboard/templates/_syspanel_instance_list.html
+++ b/openstack-dashboard/dashboard/templates/_syspanel_instance_list.html
@@ -3,7 +3,7 @@
   <tr>
     <th>Id</th>
     <th>User</th>
-    <th>Hostname</th>
+    <th>Host</th>
     <th>Created</th>
     <th>Image</th>
     <th>Public IP</th>
@@ -15,7 +15,7 @@
     <tr id="{{instance.id}}" class="{% cycle "odd" "even" %}">
       <td>{{instance.id}}</td>
       <td>{{instance.attrs.user_id}}</td>
-      <td>{{instance.attrs.hostname}}</td>
+      <td>{{instance.attrs.host}}</td>
       <td>{{instance.attrs.launched_at|parse_date}}</td>
       <td>{{instance.attrs.image_name}}</td>
 
