--- a/openstack-dashboard/dashboard/templates/dash_usage.html
+++ b/openstack-dashboard/dashboard/templates/dash_usage.html
@@ -68,20 +68,12 @@
           <th>Status</th>
         </tr>
         <tbody class='main'>
-          {% for instance in running_instances %}
-          <tr class="{% cycle 'odd' 'even' %}">
-              <td>{{instance.name}}</td>
-              <td>{{instance.user_id}}</td>
-              <td>{{instance.vcpus}}</td>
-              <td>{{instance.ram_size}}MB</td>
-              <td>{{instance.disk_size}}GB</td>
-              <td>{{instance.flavor}}</td>
-              <td>{{instance.uptime_at|timesince}}</td>
-              <td>{{instance.state|lower|capfirst}}</td>
-          </tr>
-          {% endfor %}
-          {% for instance in terminated_instances %}
-          <tr class="terminated">
+          {% for instance in instances %}
+            {% if instance.ended_at %}
+              <tr class="terminated">
+            {% else %}
+              <tr class="{% cycle 'odd' 'even' %}">
+            {% endif %}
               <td>{{instance.name}}</td>
               <td>{{instance.user_id}}</td>
               <td>{{instance.vcpus}}</td>
