--- a/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
+++ b/openstack-dashboard/dashboard/templates/syspanel_tenant_usage.html
@@ -82,8 +82,12 @@
             <th>Status</th>
           </tr>
           <tbody class='main'>
-            {% for instance in usage.instances %}
-            <tr class="{% cycle 'odd' 'even' %}">
+            {% for instance in instances %}
+              {% if instance.ended_at %}
+                <tr class="terminated">
+              {% else %}
+                <tr class="{% cycle 'odd' 'even' %}">
+              {% endif %}
                 <td>{{instance.name}}</td>
                 <td>{{instance.user_id}}</td>
                 <td>{{instance.vcpus}}</td>
@@ -91,8 +95,8 @@
                 <td>{{instance.disk_size}}GB</td>
                 <td>{{instance.flavor}}</td>
                 <td>{{instance.uptime_at|timesince}}</td>
-                <td>{{instance.state}}</td>
-            </tr>
+                <td>{{instance.state|capfirst}}</td>
+              </tr>
             {% endfor %}
           </tbody>
         </table>
